Syncing community pr 2069.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/shared/modules/ROOT/partials/zh/glossary.adoc
+++ b/shared/modules/ROOT/partials/zh/glossary.adoc
@@ -134,6 +134,8 @@ Upstream cluster:: An alternative name for the _Rancher server_, the Kubernetes 
 +
 *Related terms:* _Downstream cluster, Hosted cluster, Imported cluster, Managed cluster, Registered cluster_
 
+User:: A Rancher resource `users.management.cattle.io` that defines a user within Rancher.
+
 == W
 
 Workload:: Objects that set deployment rules for pods. Based on these rules, Kubernetes performs the deployment and updates the workload with the current state of the application. Workloads let you define the rules for application scheduling, scaling, and upgrade.
