--- a/versions/v2.13/modules/en/nav.adoc
+++ b/versions/v2.13/modules/en/nav.adoc
@@ -417,6 +417,7 @@ endif::[]
 *** xref:api/workflows/kubeconfigs.adoc[]
 *** xref:api/workflows/projects.adoc[]
 *** xref:api/workflows/tokens.adoc[]
+*** xref:api/workflows/users.adoc[]
 ** xref:api/reference.adoc[]
 ** xref:api/api-tokens.adoc[]
 ** xref:api/extension-apiserver.adoc[]
