--- a/versions/v2.13/modules/zh/nav.adoc
+++ b/versions/v2.13/modules/zh/nav.adoc
@@ -395,6 +395,7 @@
 *** xref:api/workflows/kubeconfigs.adoc[]
 *** xref:api/workflows/projects.adoc[]
 *** xref:api/workflows/tokens.adoc[]
+*** xref:api/workflows/users.adoc[]
 ** xref:api/reference.adoc[]
 ** xref:api/api-tokens.adoc[]
 ** xref:api/extension-apiserver.adoc[]
