--- a/versions/v2.13/modules/en/nav.adoc
+++ b/versions/v2.13/modules/en/nav.adoc
@@ -1,6 +1,6 @@
-* Release Notes
-** xref:release-notes.adoc[]
-** xref:release-notes/v2.13.adoc[]
+* xref:release-notes.adoc[Release Notes]
+** xref:release-notes/v2.13.0.adoc[]
+** xref:release-notes/v2.13.1.adoc[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
