Apply suggestions from code review
Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-github-app.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-github-app.adoc
@@ -21,13 +21,13 @@ Before configuring the provider in Rancher, you must first create a GitHub App f
 . Open your https://github.com/settings/organizations[GitHub organization settings].
 . To the right of the organization, select *Settings*.
 . In the left sidebar, click *Developer settings* > *GitHub Apps*.
-. Click *New Github App*.
+. Click *New GitHub App*.
 . Fill in the GitHub App configuration form with these values:
  ** *GitHub App name*: Anything you like, e.g. `My Rancher`.
  ** *Application description*: Optional, can be left blank.
  ** *Homepage URL*: `+https://localhost:8443+`.
  ** *Callback URL*: `+https://localhost:8443/verify-auth+`.
-. Select *Create Github App*.
+. Select *Create GitHub App*.
 
 === Generate a Client Secret
 
