--- a/versions/v2.13/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/v2.13/modules/en/pages/faq/deprecated-features.adoc
@@ -16,6 +16,7 @@ Rancher will publish deprecated features as part of the https://github.com/ranch
 |===
 | Patch Version | Release Date
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
 | https://github.com/rancher/rancher/releases/tag/v2.12.4[2.12.4]
 | Nov 24, 2025
 
