--- a/versions/v2.13/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.13/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -13,11 +13,10 @@ Rancher 将 Rancher-Webhook 作为单独的 deployment 和服务部署在 local 
 
 *注意：* Rancher 负责管理 webhook 的部署和升级。在多数情况下，不需要用户干预来确保 webhook 版本与你正在运行的 Rancher 版本兼容。
 
-// releaseTask
-
 |===
 | Rancher Version | Webhook Version | Availability in Prime | Availability in Community
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
 | v2.12.4
 | v0.8.4
 | &check;
