Update chart name for Rancher v2.13.1

--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/install-rancher.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-25
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 :description: Learn how to install Rancher in development and production environments. Read about single node and high availability installation
 
@@ -210,8 +210,10 @@ Because `rancher` is the default option for `ingress.tls.source`, we are not spe
 * Set the `bootstrapPassword` to something unique for the `admin` user.
 * To install a specific Rancher version, use the `--version` flag, example: `--version 2.7.0`
 
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin
@@ -252,9 +254,10 @@ In the following command,
 When `agent-tls-mode` is set to `strict` (the default value for new installs of Rancher starting from v2.9.0), you must supply the `privateCA=true` chart value (e.x. through `--set privateCA=true`) and upload the Let's Encrypt Certificate Authority as outlined in xref:installation-and-upgrade/resources/tls-secrets.adoc[Adding TLS Secrets]. Information on identifying the Let's Encrypt Root CA can be found in the Let's Encrypt https://letsencrypt.org/certificates/[docs]. If you don't upload the CA, then Rancher may fail to connect to new or existing downstream clusters.
 ====
 
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -292,8 +295,10 @@ If you want to check if your certificates are correct, see xref:../../../faq/tec
 * Set the `bootstrapPassword` to something unique for the `admin` user.
 * Set `ingress.tls.source` to `secret`.
 
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -302,8 +307,10 @@ helm install rancher rancher-prime/rancher \
 
 If you are using a Private CA signed certificate , add `--set privateCA=true` to the command:
 
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
