--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-18
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 This section is about how to deploy Rancher for your air gapped environment in a high-availability Kubernetes installation. An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.
@@ -36,9 +36,11 @@ include::shared:ROOT:partial$en/helm-chart-repo-url.adoc[]
 . Fetch the Rancher Prime chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
 ** To fetch the latest version:
 +
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 [,shell]
 ----
-helm fetch rancher-prime/rancher
+helm fetch rancher-prime/rancher-prime
 ----
 ** To fetch a specific version:
 +
@@ -51,9 +53,11 @@ helm search repo --versions rancher-prime
 +
 Fetch a specific version by specifying the `--version` parameter:
 +
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 [,shell]
 ----
-helm fetch rancher-prime/rancher --version=<version>
+helm fetch rancher-prime/rancher-prime --version=<version>
 ----
 
 === 2. Choose your SSL Configuration
