--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-18
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 These instructions capture a quick way to set up a proof-of-concept Rancher installation.
@@ -137,15 +137,20 @@ To install a specific Rancher version, use the `--version` flag (e.g., `--versio
 
 See xref:../../installation-and-upgrade/resources/bootstrap-password.adoc#_password_requirements[Setting up the Bootstrap Password] for password requirements.
 
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=<IP_OF_LINUX_NODE>.sslip.io \
   --set replicas=1 \
   --set bootstrapPassword=<PASSWORD_FOR_RANCHER_ADMIN>
 
 # Windows Powershell
-helm install rancher rancher-prime/rancher `
+
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
+helm install rancher rancher-prime/rancher-prime `
   --namespace cattle-system `
   --set hostname=<IP_OF_LINUX_NODE>.sslip.io `
   --set replicas=1 `
