--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/upgrades.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-25
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 The following instructions will guide you through upgrading a Rancher server that was installed on a Kubernetes cluster with Helm. These steps also apply to air-gapped installs with Helm.
@@ -70,16 +70,20 @@ rancher-prime          <helm-chart-repo-url>
 +
 This command will pull down the latest charts and save it in the current directory as a `.tgz` file.
 +
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 [,plain]
 ----
- helm fetch rancher-prime/rancher
+ helm fetch rancher-prime/rancher-prime
 ----
 +
 You can fetch the chart for the specific version you are upgrading to by adding in the `--version=` tag.  For example:
 +
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 [,plain]
 ----
- helm fetch rancher-prime/rancher --version=2.6.8
+ helm fetch rancher-prime/rancher-prime --version=2.6.8
 ----
 
 === 3. Upgrade Rancher
@@ -131,8 +135,10 @@ Upgrade Rancher to the latest version with all your settings.
 
 Take all the values from the previous step and append them to the command using `--set key=value`.
 
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
 ----
-helm upgrade rancher rancher-prime/rancher \
+helm upgrade rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -146,12 +152,11 @@ The above is an example, there may be more values from the previous step that ne
 
 [TIP]
 ====
-
 If you deploy Rancher through the AWS Marketplace, the deployment name is 'rancher-prime'.
 Thus:
 
 ----
-helm upgrade rancher-prime rancher-prime/rancher \
+helm upgrade rancher-prime rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -167,9 +172,11 @@ Alternatively, it's possible to export the current values to a file and referenc
 ----
 
 . Update only the Rancher version:
-++
++
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 ----
- helm upgrade rancher rancher-prime/rancher \
+ helm upgrade rancher rancher-prime/rancher-prime \
    --namespace cattle-system \
    -f values.yaml \
    --version=2.6.8
