--- a/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-18
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 Rancher includes some features that are experimental and disabled by default. You might want to enable these features, for example, if you decide that the benefits of using an xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc[unsupported storage type] outweighs the risk of using an untested feature. Feature flags were introduced to allow you to try these features that are not enabled by default.
@@ -39,8 +39,10 @@ Values set from the Rancher API will override the value passed in through the co
 
 When installing Rancher with a Helm chart, use the `--set` option. In the below example, two features are enabled by passing the feature flag names in a comma separated list:
 
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set 'extraEnv[0].name=CATTLE_FEATURES'
