--- a/versions/v2.13/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.13/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-11-18
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 Rancher-Webhook is an essential component of Rancher that works in conjunction with Kubernetes to enhance security and enable critical features for Rancher-managed clusters.
@@ -99,9 +99,11 @@ When you use Helm to install the Rancher chart, you can add custom Helm values t
 
 These values are synced to the `rancher-config` ConfigMap during installation.
 
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
 [,bash]
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   ...
   --set webhook.port=9553 \
