--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/install-rancher.adoc
@@ -1,6 +1,6 @@
 = 在 Kubernetes 集群上安装/升级 {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-08-25
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 :description: 了解如何在开发和生产环境中安装 Rancher。了解单节点和高可用安装
 
@@ -207,8 +207,10 @@ Rancher 生成的证书::
 * 将 `bootstrapPassword` 设置为 `admin` 用户独有的值。
 * 如果你需要安装指定的 Rancher 版本，使用 `--version` 标志，例如 `--version 2.7.0`。
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[] 
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin
@@ -241,8 +243,10 @@ Let's Encrypt::
 * 将 `letsEncrypt.email` 设置为可通讯的电子邮件地址，用于发送通知（例如证书到期的通知）。
 * 将 `letsEncrypt.ingress.class` 设为你的 Ingress Controller（例如 `traefik`，`nginx`，`haproxy`）
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -280,8 +284,10 @@ deployment "rancher" successfully rolled out
 * 将 `bootstrapPassword` 设置为 `admin` 用户独有的值。
 * 将 `ingress.tls.source` 设置为 `secret`。
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -290,8 +296,10 @@ helm install rancher rancher-prime/rancher \
 
 如果你使用的是私有 CA 证书，请在命令中增加 `--set privateCA=true`。
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
