--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -1,6 +1,6 @@
 = 4. 安装 {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-08-18
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 本文介绍如何在高可用 Kubernetes 安装的离线环境部署 Rancher。离线环境可以是 Rancher Server 离线安装、防火墙后面或代理后面。
@@ -35,9 +35,11 @@ include::shared:ROOT:partial$zh/helm-chart-repo-url.adoc[]
 
 ** 如需下载最新的 Rancher Prime 版本:
 +
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
++
 [,shell]
 ----
-helm fetch rancher-prime/rancher
+helm fetch rancher-prime/rancher-prime
 ----
 ** To fetch a specific version:
 +
@@ -50,9 +52,11 @@ helm search repo --versions rancher-prime
 +
 如需下载特定的 Rancher Prime 版本，你可以用 Helm `--version` 参数指定版本，如下：
 +
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
++
 [,shell]
 ----
-helm fetch rancher-prime/rancher --version=<version>
+helm fetch rancher-prime/rancher-prime --version=<version>
 ----
 
 === 2. 选择 SSL 配置
