--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -1,6 +1,6 @@
 = 3. 安装 {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 
@@ -80,8 +80,10 @@ kubectl create namespace cattle-system
 
 然后使用 Helm 安装 Rancher：Rancher 也需要你配置代理，以便它可以与外部应用商店通信，或检索 Kubernetes 版本更新元数据：
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
 ----
-helm upgrade --install rancher rancher-prime/rancher \
+helm upgrade --install rancher rancher-prime/rancher-prime \
    --namespace cattle-system \
    --set hostname=rancher.example.com \
    --set proxy=http://${proxy_host} \
