--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
@@ -1,6 +1,6 @@
 = Helm CLI 快速入门
 :page-languages: [en, zh]
-:revdate: 2025-08-18
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 本文提供了快速安装 Rancher 的方法。
@@ -135,15 +135,20 @@ helm install cert-manager jetstack/cert-manager `
 
 请注意，密码至少需要 12 个字符。
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=<IP_OF_LINUX_NODE>.sslip.io \
   --set replicas=1 \
   --set bootstrapPassword=<PASSWORD_FOR_RANCHER_ADMIN>
 
 # Windows Powershell
-helm install rancher rancher-prime/rancher `
+
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
+helm install rancher rancher-prime/rancher-prime `
   --namespace cattle-system `
   --set hostname=<IP_OF_LINUX_NODE>.sslip.io `
   --set replicas=1 `
