--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -1,6 +1,6 @@
 = 更新 {rancher-product-name} 证书
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 == 更新私有 CA 证书
@@ -122,9 +122,11 @@ privateCA: true
 
 . 使用 `values.yaml` 文件和当前 Chart 版本升级 Helm 应用程序实例。版本必须匹配以防止 Rancher 升级。
 +
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
++
 [,bash]
 ----
-    helm upgrade rancher rancher-prime/rancher \
+    helm upgrade rancher rancher-prime/rancher-prime \
      --namespace cattle-system \
      -f values.yaml \
      --version <DEPLOYED_RANCHER_VERSION>
@@ -279,9 +281,11 @@ helm ls -n cattle-system
   ... 如果使用 Let's Encrypt，将值更新为 `letsEncrypt`
 . 使用 `values.yaml` 文件更新 Rancher Chart 的 Helm 值，并使用当前 Chart 版本防止升级：
 +
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
++
 [,bash]
 ----
-helm upgrade rancher rancher-prime/rancher \
+helm upgrade rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
