--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/upgrades.adoc
@@ -1,6 +1,6 @@
 = 升级
 :page-languages: [en, zh]
-:revdate: 2025-08-25
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 本文介绍如何升级使用 Helm 安装在 Kubernetes 集群上的 Rancher Server。这些步骤也适用于使用 Helm 进行的离线安装。
@@ -68,16 +68,20 @@ rancher-prime          <helm-chart-repo-url>
 +
 该命令将提取最新的 Chart，并将其作为 ``.tgz``文件保存在当前目录中。
 +
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
++
 [,plain]
 ----
-helm fetch rancher-prime/rancher
+helm fetch rancher-prime/rancher-prime
 ----
 +
 你可以通过 `--version=` 标记，来指定要升级的目标 Chart 版本。例如：
 +
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
++
 [,plain]
 ----
-helm fetch rancher-prime/rancher --version=2.6.8
+helm fetch rancher-prime/rancher-prime --version=2.6.8
 ----
 
 === 3. 升级 Rancher
@@ -109,7 +113,6 @@ hostname: rancher.my.org
 
 [TIP]
 ====
-
 Deployment 的名称可能会有所不同。例如，如果你通过 AWS Marketplace 部署 Rancher，则 Deployment 的名称为"`rancher-prime`"。
 因此：
 
@@ -129,8 +132,10 @@ hostname: rancher.my.org
 
 将上一步中的所有值用 `--set key=value` 追加到命令中。
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
 ----
-helm upgrade rancher rancher-prime/rancher \
+helm upgrade rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -148,8 +153,10 @@ helm upgrade rancher rancher-prime/rancher \
 如果你通过 AWS Marketplace 部署 Rancher，则 Deployment 的名称为"`rancher-prime`"。
 因此：
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
 ----
-helm upgrade rancher-prime rancher-prime/rancher \
+helm upgrade rancher-prime rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -166,8 +173,10 @@ helm get values rancher -n cattle-system -o yaml > values.yaml
 
 . 只更新 Rancher 版本：
 +
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
++
 ----
-helm upgrade rancher rancher-prime/rancher \
+helm upgrade rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   -f values.yaml \
   --version=2.6.8
