--- a/versions/v2.13/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.13/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -1,6 +1,6 @@
 = {rancher-product-name} Webhook
 :page-languages: [en, zh]
-:revdate: 2025-11-18
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 Rancher-Webhook 是 Rancher 的重要组件，它与 Kubernetes 结合使用，用于增强安全性并为 Rancher 管理的集群启用关键功能。
@@ -97,9 +97,11 @@ Rancher 会在检测到对 ConfigMap 值的更改时重新部署 Rancher-Webhook
 
 这些值在安装过程中会同步到 `rancher-config` ConfigMap 中。
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
 [,bash]
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   ...
   --set webhook.port=9553 \
