--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 == Updating a Private CA Certificate
@@ -124,9 +124,11 @@ privateCA: true
 
 . Upgrade the Helm application instance using the `values.yaml` file and the current chart version. The version must match to prevent an upgrade of Rancher.
 +
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 [,bash]
 ----
-    helm upgrade rancher rancher-prime/rancher \
+    helm upgrade rancher rancher-prime/rancher-prime \
      --namespace cattle-system \
      -f values.yaml \
      --version <DEPLOYED_RANCHER_VERSION>
@@ -283,9 +285,11 @@ helm ls -n cattle-system
   ... If using Let's Encrypt update the value to: `letsEncrypt`
 . Update the Helm values for the Rancher chart using the `values.yaml` file, and the current chart version to prevent an upgrade:
 +
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 [,bash]
 ----
-helm upgrade rancher rancher-prime/rancher \
+helm upgrade rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
