--- a/versions/v2.13/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-27
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 Since Rancher v2.12.1, SUSE Rancher Prime customers can now register Rancher Manager with https://scc.suse.com/home[SUSE Customer Center (SCC)]. This registration helps you track the use of your organization's subscriptions and deployed Rancher Manager instances.
@@ -36,7 +36,7 @@ image::online-scc-registration.png[Register with SCC using online method]
 
 ==== Helm
 
-After you have your registration code, you can register your Rancher Manager instance through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the Helm install command `helm install rancher rancher-prime/rancher`.
+After you have your registration code, you can register your Rancher Manager instance through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the Helm install command `helm install rancher rancher-prime/rancher-prime`.
 
 You can also update `values.yaml`, enabling registration and adding your registration code.
 
@@ -69,6 +69,8 @@ image::offline-scc-registration.png[Register with SCC using offline method]
 
 ==== Helm
 
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
 . In `values.yaml`, enable registration, comment out `regCode` and set the `mode` to `offline`.
 +
 [,yaml]
@@ -79,7 +81,7 @@ registration:
   mode: offline
 ----
 
-. Run the Helm install command `helm install rancher rancher-prime/rancher` and verify installation is successful. 
+. Run the Helm install command `helm install rancher rancher-prime/rancher-prime` and verify installation is successful. 
 . Before proceeding, use the following Bash command to check that the SCC-Operator has successfully created a secret in the `cattle-scc-system` namespace. After the secret is created, it outputs  `Secret created!`.
 +
 [,bash]
