--- a/versions/v2.13/modules/zh/pages/rancher-admin/experimental-features/experimental-features.adoc
+++ b/versions/v2.13/modules/zh/pages/rancher-admin/experimental-features/experimental-features.adoc
@@ -1,6 +1,6 @@
 = 启用实验功能
 :page-languages: [en, zh]
-:revdate: 2025-08-18
+:revdate: 2025-12-15
 :page-revdate: {revdate}
 
 Rancher 包含一些默认关闭的实验功能。在某些情况下，例如当你认为使用xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc[不支持的存储类型]的好处大于使用未经测试的功能的风险时，你可能想要启用实验功能。为了让你能够试用这些默认关闭的功能，我们引入了功能开关（feature flag）。
@@ -37,8 +37,10 @@ Rancher 包含一些默认关闭的实验功能。在某些情况下，例如当
 
 使用 Helm Chart 安装 Rancher 时，使用 `--set` 选项。下面的示例通过传递功能开关名称（用逗号分隔）来启用两个功能：
 
+include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
+
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher rancher-prime/rancher-prime \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set 'extraEnv[0].name=CATTLE_FEATURES'
