Add changes to zh docs

--- a/versions/v2.13/modules/zh/nav.adoc
+++ b/versions/v2.13/modules/zh/nav.adoc
@@ -99,6 +99,7 @@
 ***** xref:rancher-admin/users/authn-and-authz/configure-azure-ad.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-freeipa.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-github.adoc[]
+***** xref:rancher-admin/users/authn-and-authz/configure-github-app.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-google-oauth.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-keycloak-oidc.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-keycloak-saml.adoc[]
