--- a/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-keycloak-oidc.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-keycloak-oidc.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-08
 :page-revdate: {revdate}
 :description: Create a Keycloak OpenID Connect (OIDC) client and configure Rancher to work with Keycloak. By the end your users will be able to sign into Rancher using their Keycloak logins
 
@@ -254,8 +254,7 @@ In some cases, this error message may be misleading and is caused by setting the
 
 === Unable to See Groups When Assigning Global Roles
 
-If you use a user that is not part of any groups for initial setup, then you cannot search for groups when trying to assign a global role.
-To resolve this, you can either:
+If you use a user that is not part of any groups for initial setup, then you cannot search for groups when trying to assign a global role. To resolve this, you can either:
 
 . Manually edit the `authconfig/keycloakoidc` object to enable group search.
  .. On the Rancher server:
@@ -264,7 +263,6 @@ To resolve this, you can either:
 ----
   kubectl edit authconfigs.management.cattle.io keycloakoidc
 ----
-
  .. Set `groupSearchEnabled: true`.
  .. Save your changes.
 . Reconfigure your Keycloak OIDC setup using a user that is assigned to at least one group in Keycloak.
