Add partial to zh folder / update zh docs

--- a/versions/v2.13/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc
+++ b/versions/v2.13/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc
@@ -170,4 +170,4 @@ In some cases, the "Invalid grant_type" error message may be misleading and is a
 
 == Configuring OIDC Single Logout (SLO)
 
-include::shared:ROOT:partial$en/configure-slo-oidc.adoc[]
+include::shared:ROOT:partial$zh/configure-slo-oidc.adoc[]
