--- a/versions/v2.13/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-keycloak-oidc.adoc
+++ b/versions/v2.13/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-keycloak-oidc.adoc
@@ -268,4 +268,4 @@ If you use a user that is not part of any groups for initial setup, then you can
 
 == Configuring OIDC Single Logout (SLO)
 
-include::shared:ROOT:partial$en/configure-slo-oidc.adoc[]
+include::shared:ROOT:partial$zh/configure-slo-oidc.adoc[]
