--- a/versions/v2.13/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-amazon-cognito.adoc
+++ b/versions/v2.13/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-amazon-cognito.adoc
@@ -65,4 +65,4 @@ If you fill out the **Configure an Amazon Cognito account** form and click on **
 
 == Configuring OIDC Single Logout (SLO)
 
-include::shared:ROOT:partial$en/configure-slo-oidc.adoc[]
+include::shared:ROOT:partial$zh/configure-slo-oidc.adoc[]
