--- a/versions/v2.12/modules/en/pages/release-notes.adoc
+++ b/versions/v2.12/modules/en/pages/release-notes.adoc
@@ -10,11 +10,14 @@ endif::[]
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION.
 | v2.12.4
 | https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
 | N/A
 | &#10003;
 | N/A
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION END.
+
 |===
 
 == Past Versions
@@ -22,6 +25,7 @@ endif::[]
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. PAST VERSIONS.
 | v2.12.3
 | https://github.com/rancher/rancher/releases/tag/v2.12.3[View]
 | https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-3/[View]
@@ -45,4 +49,6 @@ endif::[]
 | N/A
 | N/A
 | &#10003;
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. PAST VERSIONS END.
+
 |===
