--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
@@ -21,6 +21,7 @@ In order to deploy and run the adapter successfully, you need to ensure its vers
 |===
 | Rancher Version | Adapter Version
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
 | v2.12.4
 | v107.0.0+up7.0.0
 
