--- a/versions/v2.12/modules/zh/pages/release-notes.adoc
+++ b/versions/v2.12/modules/zh/pages/release-notes.adoc
@@ -8,11 +8,14 @@
 |===
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION.
 | v2.12.4
 | https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
 | N/A
 | &#10003;
 | &cross;
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION END.
+
 |===
 
 == 旧版本
@@ -20,6 +23,7 @@
 |===
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. PAST VERSIONS.
 | v2.12.3
 | https://github.com/rancher/rancher/releases/tag/v2.12.3[View]
 | https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-3/[View]
@@ -43,4 +47,6 @@
 | N/A
 | N/A
 | &#10003;
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. PAST VERSIONS END.
+
 |===
