--- a/versions/v2.12/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/v2.12/modules/en/pages/faq/deprecated-features.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-11-18
+:revdate: 2025-12-17
 :page-revdate: {revdate}
 
 == What is Rancher's deprecation policy?
@@ -17,6 +17,9 @@ Rancher will publish deprecated features as part of the https://github.com/ranch
 | Patch Version | Release Date
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
+| https://github.com/rancher/rancher/releases/tag/v2.12.5[2.12.5]
+| Dec 17, 2025
+
 | https://github.com/rancher/rancher/releases/tag/v2.12.4[2.12.4]
 | Nov 24, 2025
 
