--- a/versions/v2.12/modules/en/pages/release-notes.adoc
+++ b/versions/v2.12/modules/en/pages/release-notes.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-11-18
+:revdate: 2025-12-17
 :page-revdate: {revdate}
 
 == Current Version
@@ -11,8 +11,8 @@ endif::[]
 | Version | Release Notes | Support Matrix | Prime | Community
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION.
-| v2.12.4
-| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| v2.12.5
+| xref:release-notes/v2.12.5.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.12.5[GitHub Release]
 | N/A
 | &#10003;
 | N/A
@@ -26,6 +26,12 @@ endif::[]
 | Version | Release Notes | Support Matrix | Prime | Community
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. PAST VERSIONS.
+| v2.12.4
+| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-4/[View]
+| &#10003;
+| N/A
+
 | v2.12.3
 | https://github.com/rancher/rancher/releases/tag/v2.12.3[View]
 | https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-3/[View]
