--- a/versions/v2.12/modules/zh/pages/release-notes.adoc
+++ b/versions/v2.12/modules/zh/pages/release-notes.adoc
@@ -1,6 +1,6 @@
 = 发版说明
 :page-languages: [en, zh]
-:revdate: 2025-11-18
+:revdate: 2025-12-17
 :page-revdate: {revdate}
 
 == 当前版本
@@ -9,11 +9,11 @@
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION.
-| v2.12.4
-| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| v2.12.5
+| xref:release-notes/v2.12.5.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.12.5[GitHub Release]
 | N/A
 | &#10003;
-| &cross;
+| N/A
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION END.
 
 |===
@@ -24,6 +24,12 @@
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. PAST VERSIONS.
+| v2.12.4
+| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-4/[View]
+| &#10003;
+| &cross;
+
 | v2.12.3
 | https://github.com/rancher/rancher/releases/tag/v2.12.3[View]
 | https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-3/[View]
