--- a/versions/v2.12/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.12/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -1,6 +1,6 @@
 = {rancher-product-name} Webhook
 :page-languages: [en, zh]
-:revdate: 2025-11-18
+:revdate: 2025-12-17
 :page-revdate: {revdate}
 
 Rancher-Webhook 是 Rancher 的重要组件，它与 Kubernetes 结合使用，用于增强安全性并为 Rancher 管理的集群启用关键功能。
@@ -17,6 +17,11 @@ Rancher 将 Rancher-Webhook 作为单独的 deployment 和服务部署在 local 
 | Rancher Version | Webhook Version | Availability in Prime | Availability in Community
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
+| v2.12.5
+| v0.8.4
+| &#10003;
+| &cross;
+
 | v2.12.4
 | v0.8.4
 | &check;
