--- a/versions/v2.11/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
+++ b/versions/v2.11/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
@@ -18,6 +18,7 @@ In order to deploy and run the adapter successfully, you need to ensure its vers
 |===
 | Rancher Version | Adapter Version
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
 | v2.11.8
 | 106.0.0+up6.0.0
 
