--- a/versions/v2.11/modules/zh/pages/faq/deprecated-features.adoc
+++ b/versions/v2.11/modules/zh/pages/faq/deprecated-features.adoc
@@ -14,6 +14,7 @@ Rancher 将在 GitHub 上发布的 Rancher 的link:https://github.com/rancher/ra
 |===
 | Patch 版本 | 发布时间
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
 | https://github.com/rancher/rancher/releases/tag/v2.11.8[2.11.8]
 | 2025 年 11 月 24 日
 
