--- a/versions/v2.11/modules/en/pages/release-notes.adoc
+++ b/versions/v2.11/modules/en/pages/release-notes.adoc
@@ -8,11 +8,14 @@
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION.
 | v2.11.8
 | https://github.com/rancher/rancher/releases/tag/v2.11.8[View]
 | N/A
 | &#10003;
 | N/A
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION END.
+
 |===
 
 == Past Versions
@@ -20,6 +23,7 @@
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. PAST VERSIONS.
 | v2.11.7
 | https://github.com/rancher/rancher/releases/tag/v2.11.7[View]
 | https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-11-7/[View]
@@ -67,4 +71,6 @@
 | N/A
 | N/A
 | &#10003;
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. PAST VERSIONS END.
+
 |===
