--- a/versions/v2.11/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.11/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -13,11 +13,10 @@ Each Rancher version is designed to be compatible with a single version of the w
 
 NOTE: Rancher manages deployment and upgrade of the webhook. Under most circumstances, no user intervention should be needed to ensure that the webhook version is compatible with the version of Rancher that you are running.
 
-// releaseTask
-
 |===
 | Rancher Version | Webhook Version | Availability in Prime | Availability in Community
 
+// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
 | v2.11.8
 | v0.7.8
 | &check;
