--- a/versions/v2.11/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/v2.11/modules/en/pages/faq/deprecated-features.adoc
@@ -1,6 +1,6 @@
 = Deprecated Features in {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-11-18
+:revdate: 2025-12-17
 :page-revdate: {revdate}
 
 == What is Rancher's deprecation policy?
@@ -15,6 +15,9 @@ Rancher will publish deprecated features as part of the https://github.com/ranch
 | Patch Version | Release Date
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
+| https://github.com/rancher/rancher/releases/tag/v2.11.9[2.11.9]
+| Dec 17, 2025
+
 | https://github.com/rancher/rancher/releases/tag/v2.11.8[2.11.8]
 | November 24, 2025
 
