--- a/versions/v2.11/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.11/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -1,6 +1,6 @@
 = {rancher-product-name} Webhook
 :page-languages: [en, zh]
-:revdate: 2025-11-18
+:revdate: 2025-12-17
 :page-revdate: {revdate}
 
 Rancher-Webhook is an essential component of Rancher that works in conjunction with Kubernetes to enhance security and enable critical features for Rancher-managed clusters.
@@ -17,6 +17,11 @@ NOTE: Rancher manages deployment and upgrade of the webhook. Under most circumst
 | Rancher Version | Webhook Version | Availability in Prime | Availability in Community
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
+| v2.11.9
+| v0.7.8
+| &#10003;
+| &cross;
+
 | v2.11.8
 | v0.7.8
 | &check;
